--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap&subset=cyrillic'); */
-/* @import url('https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap'); */
 @import url('slider.css');
 @import url('nav.css');
 @import url('mainBlock.css');
@@ -9,19 +7,28 @@
 @import url('service.css');
 @import url('price.css');
 @import url('contact.css');
+@import url('media.css');
+/* ----fonts----- */
+
+
 
 @font-face{
   font-family: 'Nautilus';
-  src: url("/font/Nautilus.otf") format("opentype"); }
-@font-face{
-  font-family: 'Devroye';
-  src: url("/font/Devroye.ttf") format("opentype"); }
+  src: url("/font/Nautilus.otf") format("opentype"); 
+  font-display: swap;
+
+}
 @font-face{
   font-family: 'Blogger-Italic';
-  src: url("/font/Blogger-Italic.otf") format("opentype"); }
+  src: url("/font/Blogger-Italic.otf") format("opentype");
+  font-display: swap;
+ }
 @font-face{
   font-family: 'AmaticSC';
-  src: url("/font/AmaticSC.ttf") format("opentype"); }
+  src: url("/font/AmaticSC.ttf") format("opentype"); 
+  font-display: swap;
+}
+/* ----general styles */
 *{
     box-sizing:border-box;
     margin:0;
