--- a/styles/nav.css
+++ b/styles/nav.css
@@ -185,6 +185,7 @@ nav li li a:hover{
 }
   
 @media only screen and (min-width: 1001px) {
+    /* NAV */
     nav{
         display:block;
 
@@ -193,6 +194,7 @@ nav li li a:hover{
   }
 
 @media only screen and (max-width: 1180px) {
+        /* NAV */
     nav >ul>li >a{
       padding:35px 15px;
 
@@ -204,6 +206,7 @@ nav li li a:hover{
 
 
 @media only screen and (max-width: 1000px) {
+        /* NAV */
     .header{
         background:rgba(31, 39, 46, 0.762);
 
@@ -325,16 +328,3 @@ nav li li a:hover{
      
   
   }
-
-
-  
-
-@media all and (max-width:500px){
-    .header{
-        background:rgb(31, 39, 46);
-        margin-bottom: 300px;
-    }
-    
-   
-}
-
