--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,9 +1,9 @@
-.main_photo{
-  /* padding-top:90px; */
-  /* width: 100%; */
-  /* background-image: url(/images/portfolio_main.jpg);
-  background-size: cover;
-  background-repeat: no-repeat ; */
+/* ---general styles--- */
+.container{
+  width: 100%;
+  padding: 0 10%;
+  text-align: center;
+  
 }
 .main_photo img{
   width: 100%;
@@ -38,12 +38,7 @@
   font-size: 30px;
 }
 
-.container{
-  width: 100%;
-  padding: 0 10%;
-  text-align: center;
-  
-}
+/* -----gallery wrapper----- */
 .gallery-main{
   width: 100%;
   display: grid;
@@ -53,32 +48,15 @@
 .gallery-item{
   width: 300px;
   height: 300px;
-  /* background-color: red; */
 }
 .another{
   width: 404px;
   height: 120px;
   background-color: blue;
 }
-/* pagination */
-/* .num {
-display: none;
-}
-.paginator {
-line-height: 150%;
-}
-.paginator > span {
-display: inline-block;
-margin-right: 10px;
-cursor: pointer;
-}
-.paginator_active {
-color: red;
-} */
-/*  */
 
 
-/* pagination */
+/* -----pagination for portfolio----- */
 .pagination1{
 height: 50px;
 padding-top: 20px;
@@ -98,10 +76,7 @@ border: 1px solid red;
 color: red;
 }
 
-
-
-
-/*  */
+/* ---gallery---- */
 .imageGrid {
   line-height: 0;
   width: 100%;
@@ -114,7 +89,6 @@ color: red;
   min-height:300px;
   line-height: 1.2;
   display:inline-block;
-  /* background-image: url(/images/portfolio1.jpg); */
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -124,12 +98,8 @@ color: red;
   font-family:"Roboto",sans-serif;
   text-shadow: 2px 2px 2px #000;
   cursor: pointer; 
-  box-shadow: 2px 2px 2px 2px grey;
-
-  /* cursor: hand; */
-  
+  box-shadow: 2px 2px 2px 2px grey;  
 }
-
 .imageGrid .tile:before {
   content: '';
   background-color: rgba(15,15,15,0.5);
@@ -141,10 +111,8 @@ color: red;
 .imageGrid .tile:hover:before {
   display: none;
 }
-
 .imageGrid .tile .textWrapper {
   text-align: center;
-  /* vertical-align: middle; */
   width:90%;
   position: absolute;
   top: 50%;
@@ -163,20 +131,4 @@ color: red;
 
 .imageGrid .tile:hover .textWrapper .content h2 {
   margin: 0;
-}
-
-@media (max-width: 1000px) {
-  .imageGrid .tile {
-    width: 300px;
-  }
-  .main_header{
-      display: none;
-  }
-}
- 
-@media all and (max-width:400px){
-.imageGrid .tile{
-  width: 250px;
-  height: 250px;
-}
 }
