--- a/styles/service.css
+++ b/styles/service.css
@@ -1,8 +1,4 @@
-*{
-    margin: 0;
-    padding:0;
-    box-sizing: border-box;
-}
+
 
 .visible-item{
     display: grid;
@@ -18,14 +14,10 @@
 .services{
     margin: 0 10%;
     display: grid;
-    grid-template-columns: auto;
-    
+    grid-template-columns: auto;   
     grid-gap: 40px;
-    /* width: 100px;
-    height: 500px; */
-    
-
 }
+/* ---service blocks---- */
 .service-item{
     width: 1300px;
     height: 500px;
@@ -33,19 +25,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     border-radius: 10px;
-    box-shadow: 0 0 10px 7px gray;
-       
+    box-shadow: 0 0 10px 7px gray;   
 }
-
 .service-photo1{
-    /* width: 550px;
-    height: 400px; */
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-
     background-image: url(/images/servicephoto2.jpg);
     background-size: cover;
-
 }
 .service-infoBlock{
     width: 100%;
@@ -57,20 +43,16 @@
 .service-describe{
     width: 450px;
     height: 400px;
-    /* background-color: red; */
     display: grid;
     grid-template-rows: 3fr 1fr 6fr 2fr;
     justify-content: left;
     align-items: center;
-    
-    
 }
 .service-header{
     font-size: 25px;
     letter-spacing: 5px;
     text-align: left;
     text-shadow: 2px 1px 1px rgba(129, 128, 128, 0.857);
-    
 }
 .service-price{
     width: 140px;
@@ -109,10 +91,7 @@
     box-shadow: 1px 2px 2px 2px grey ;
 
 }
-/* second block */
 .service-photo2{
-    /* width: 550px;
-    height: 400px; */
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 
@@ -124,135 +103,24 @@
     cursor: pointer;
 }
 .service-photo3{
-    /* width: 550px;
-    height: 400px; */
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-
     background-image: url(/images/servicephoto3.jpg);
     background-size: cover;
-
 }
 .service-photo4{
-    /* width: 550px;
-    height: 400px; */
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-
     background-image: url(/images/servicephoto4.jpg);
     background-size: cover;
-
 }
 .service-photo5{
-    /* width: 550px;
-    height: 400px; */
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-
     background-image: url(/images/servicephoto5.jpg);
     background-size: cover;
-
 }
 .hidden-item{
     display: none;
 }
 
-
-@media all and (max-width:1400px){
-    .hidden-item{
-        width: 900px;
-        height: 350px;
-    }
-    .service-item{
-        width: 900px;
-        height: 350px;
-    }
-    .service-photo1,
-    .service-photo2,
-    .service-photo3,
-    .service-photo4,
-    .service-photo5{
-        width: 450px;
-        height: 350px;
-
-    }
-    .service-describe{
-        width: 350px;
-        height: 250px;
-    }
-}
-@media all and (max-width:1000px){
-    
-    .service-describe{
-        position: relative;
-        bottom: 40px;
-    }
-    .service-about{
-        padding: 20px 0;
-    }
-   
-    .service-item{
-        width: 450px;
-        height: 700px;
-        background-color:  rgba(227, 227, 228, 0.721);
-        display: grid;
-        grid-template-columns: 1fr;
-        border-radius: 10px;
-           
-    }
-    .service-photo1,
-    .service-photo2,
-    .service-photo3,
-    .service-photo4,
-    .service-photo5{
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;  
-        border-bottom-left-radius: 0px;      
-
-    }
-    .hidden-item{
-        display: grid;
-    }
-    .visible-item{
-        display: none;
-    }
-}
-@media all and (max-width:500px){
-    .service-photo1,
-    .service-photo2,
-    .service-photo3,
-    .service-photo4,
-    .service-photo5{
-        width: 280px;
-        height: 200px;
-
-    }
-    .service-describe{
-        width: 280px;
-        height: 200px;
-        position: initial;
-        justify-content: center;
-        padding-top: 20px;
-        
-    }
-    .service-about{
-        display: none;
-    }
-    .service-header{
-        font-size: 16px;
-    }
-    .service-button{
-        padding-top: 30px;
-    }
-    .service-button a{
-        
-        width: 150px;
-        height: 50px;
-    }
-    .service-item{
-        width: 280px;
-        height: 400px;
-        
-           
-    }
-}
