--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,9 +1,15 @@
-/* .container{
+.container{
     padding-top: 30px;
     padding-bottom: 30px;
 
-} */
-
+}
+.blog-container{
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+}
 /* -----google map----- */
 #map{ 
     width: 100%;
@@ -20,19 +26,30 @@
 .contacts{
     width: 100%;
     height: auto;
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    -ms-grid-columns: 3fr 2fr;
+        grid-template-columns: 3fr 2fr;
     margin-bottom: 30px;
     padding: 50px 0;
-    justify-content: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
     border-radius: 10px;
     box-shadow:  0px 0px 10px 5px grey;
 
 }
 .contact-info{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding-left: 100px;
 
     
@@ -40,10 +57,21 @@
 /* -----block with form---- */
 .form{
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border-right: 1px dotted grey ;
 
 }
@@ -81,10 +109,19 @@
     cursor: pointer;
 }
 .inline{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items:center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align:center;
+        -ms-flex-align:center;
+            align-items:center;
     padding-bottom: 10px;
     padding-top: 10px;
     
@@ -151,24 +188,37 @@
 .phone-info
 {
     padding-top: 5px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
 }
 .share-info{
     display: inline-block;
 }
 .social-items{
     padding-top: 5px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: left;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
 
 }
 .social-items div{
     padding-right: 10px;
 }
 .social-items div:hover{
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
 }
 /* ------share buttons------- */
 .fb-share-button{
