--- a/styles/mainBlock.css
+++ b/styles/mainBlock.css
@@ -29,8 +29,10 @@
     padding-bottom: 30px;
 }
 .aboutMe{
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: 1fr 1fr ;
+    -ms-grid-columns: 1fr 1fr ;
+        grid-template-columns: 1fr 1fr ;
     grid-gap: 40px;
     padding-bottom: 40px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.687);
@@ -51,67 +53,53 @@
 .listOfSkills p{
     padding-bottom: 10px;
 }
-
-.service2:hover::after,
-.service4:hover::after,
-.service5:hover::after{
-    content: 'Wedding';
-    font-size: 25px;
-    font-weight:bold;
-    position: relative;
-    top: 40%;
-}
-.service6:hover::after,
-.service8:hover::after{
-    content: 'Love Story';
-    font-size: 25px;
-    font-weight:bold;
-    position: relative;
-    top: 40%;
-    color:white ;
-}
-.service1:hover::after{
-    content: 'Family';
-    font-size: 25px;
-    font-weight:bold;
-    position: relative;
-    top: 40%;
-    color:white ;
-}
-.service3:hover::after{
-    content: 'New Year';
-    font-size: 25px;
-    font-weight:bold;
-    position: relative;
-    top: 40%;
-    color:white ;
-}
-.service7:hover::after{
-    content: 'Personal';
-    font-size: 25px;
-    font-weight:bold;
-    position: relative;
-    top: 40%;
-    color:white ;
-}
+/* ----main Portfolio ------ */
+ .main_service a {
+    display: inline-block;
+  }
+.main_service img {
+    display: block;
+    width: 100%;
+  }
+.main_service  .full {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    padding: 8%;
+    background: #CCC center no-repeat;
+    background: rgba(0, 0, 0, 0.8) center no-repeat;
+    background-size: contain;
+    background-origin: content-box;
+  }
+  a:focus + .full {
+    display: block;
+  }
 
 .service{
     width: 300px;
     height: 200px;
     cursor: pointer;
+    border: 2px solid grey;
+    box-shadow: 0px 0px 1px 2px grey;
 }
 .service:hover{
-    
-    background-color:rgba(78, 168, 233, 0.68);
-    transition: linear .2s ;
-    
-    
+    -webkit-transform: scale(1.04);
+            transform: scale(1.04);
+    -webkit-transition: 1s;
+    transition: 1s;    
 }
 .main_service{
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    justify-content: center;
-    /* margin: auto 10%; */
+    -ms-grid-columns: auto auto auto auto;
+        grid-template-columns: auto auto auto auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    grid-gap: 10px;
     padding-bottom: 40px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.687);
 
@@ -123,7 +111,9 @@
     display: none;
     width: 100%;
     height: 700px;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-bottom: 40px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.687);
 }
@@ -135,33 +125,45 @@
 
 .adv_container{
     width: 100%;
+    display: -ms-grid;
     display: grid;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-bottom: 40px;
 
 }
 .whyme{
-    /* width: 700px; */
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 40px;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
 }
 
 .adv{
     width:400px ;
     height: 400px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     background-color: rgba(175, 179, 187, 0.25);
     border-radius: 10px 10px 0 0;
-
 }
-
-
 .adv-img1{
     width: 360px;
     height: 240px;
@@ -181,9 +183,13 @@
     color: white;
     height: 200px;
     width: 100%;
+    display: -ms-grid;
     display: grid;
-    grid-template-rows: 1fr  1fr 1fr 1fr;
-    justify-content: center;
+    -ms-grid-rows: 1fr  1fr 1fr 1fr;
+        grid-template-rows: 1fr  1fr 1fr 1fr;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 /* ----footer styles---- */
 .footer-menu {
@@ -193,6 +199,8 @@
 
 
 .footer-menu ul{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     
 }
@@ -211,9 +219,16 @@
 }
 
 .footer-social {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 
@@ -227,7 +242,8 @@
 }
 
 .footer-social a:hover{
-    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
 }
 
 .footer-author{
