--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -41,8 +41,10 @@
 /* -----gallery wrapper----- */
 .gallery-main{
   width: 100%;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  -ms-grid-columns: auto auto auto auto;
+      grid-template-columns: auto auto auto auto;
   grid-gap: 10px;
 }
 .gallery-item{
@@ -61,8 +63,12 @@
 height: 50px;
 padding-top: 20px;
 list-style-type: none;
+display: -webkit-box;
+display: -ms-flexbox;
 display: flex;
-justify-content: center;
+-webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
 }
 .pagination1 li
 {
@@ -117,7 +123,8 @@ color: red;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   font-size: .75em;
 }
 
