--- a/styles/price.css
+++ b/styles/price.css
@@ -17,9 +17,13 @@ sup{
 }
 /* ----sorting---- */
 .sort{
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: auto;
-    justify-content: center;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-bottom: 30px;
 }
 .sort button{
@@ -30,6 +34,7 @@ sup{
 }
 .sort button:hover{
     background-color: rgb(223, 126, 126);
+    -webkit-transition: all 1s linear;
     transition: all 1s linear;
     cursor: pointer;
 }
@@ -45,6 +50,30 @@ sup{
     color: red;
 }
 /* ---blocks with price---- */
+
+.booking a{
+    position: relative;
+    display: inline-block;
+    width: 10em;
+    height: 2.5em;
+    line-height: 2.5em;
+    vertical-align: middle;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0 -1px 1px #777;
+    color: #fff;
+    outline: none;
+    border: 2px solid #F64C2B;
+    border-radius: 5px;
+    box-shadow: 0 0 0 60px rgba(0,0,0,0) inset, .1em .1em .2em #800;
+    background: -webkit-linear-gradient(#FB9575, #F45A38 48%, #EA1502 52%, #F02F17);
+    background: linear-gradient(#FB9575, #F45A38 48%, #EA1502 52%, #F02F17);
+}
+.booking a:active{
+    top: .1em;
+    left: .1em;
+    box-shadow: 0 0 0 60px rgba(0,0,0,.05) inset;
+}
 .price-party-img{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -65,9 +94,12 @@ sup{
     font-size: 13px;
 }
 .main-price-block{
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: auto auto auto ;
-    justify-content: space-around;
+    -ms-grid-columns: auto auto auto ;
+        grid-template-columns: auto auto auto ;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     grid-gap: 30px;
 }
 .main-price-block .price{
