--- a/styles/service-items.css
+++ b/styles/service-items.css
@@ -76,6 +76,7 @@
 
 .newyear-photo{
     padding-top: 30px;
+    display: -ms-grid;
     display: grid;
     grid-template-areas: 
     'floor1-3x floor1-3x floor1-3x'
@@ -101,9 +102,12 @@
     padding: 5px 0;
 }
 .item-price{
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: auto auto;
-    justify-content: space-around;
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     padding: 50px 0;
 }
 .price{
@@ -131,9 +135,13 @@
 
 }
 .price-list ul{
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: auto;
-    justify-content: center;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
 }
 .price-list li{
@@ -141,9 +149,15 @@
     list-style-type: none;
     height: 45px;
     border-bottom: 1px solid pink;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
         
 }
 .price-header{
@@ -155,14 +169,24 @@
     color: rgb(221, 45, 45);
 }
 .booking{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-top: 30px;
 }
 .booking a {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-size: 20px;
     font-family:'Blogger-Italic';
     width: 220px;
@@ -175,6 +199,7 @@
 }
 .booking a:hover{
     background-color: #111111;
+    -webkit-transition: all linear .3s ;
     transition: all linear .3s ;
     cursor: pointer;
 }
@@ -240,6 +265,7 @@
 
 .family-photo{
     padding-top: 30px;
+    display: -ms-grid;
     display: grid;
     grid-template-areas: 
     'floor1-3x floor1-3x floor1-3x'
@@ -328,6 +354,7 @@
 
 .wedding-photo{
     padding-top: 30px;
+    display: -ms-grid;
     display: grid;
     grid-template-areas: 
     'floor1-3x floor1-3x floor1-3x'
@@ -414,6 +441,7 @@
 
 .love-photo{
     padding-top: 30px;
+    display: -ms-grid;
     display: grid;
     grid-template-areas: 
     'floor1-3x floor1-3x floor1-3x'
@@ -432,8 +460,10 @@
 .master-photo>div:hover
 {
     cursor: pointer;
+    -webkit-transition: all 1s linear;
     transition: all 1s linear;
-    filter: contrast(1.5);
+    -webkit-filter: contrast(1.5);
+            filter: contrast(1.5);
     color: blue;
 }
 
@@ -465,7 +495,9 @@
     background-size: cover;
 }
 .master-price{
-justify-content: center;}
+-webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;}
 .price-master-img{
     width: 100%;
     height: 200px;
@@ -484,8 +516,11 @@ justify-content: center;}
         padding: 0 5%;
     }
     .item-price{
-        grid-template-columns: auto;
-        justify-content: center;
+        -ms-grid-columns: auto;
+            grid-template-columns: auto;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         grid-gap: 30px;
 
     }
@@ -497,13 +532,19 @@ justify-content: center;}
     .master-photo,
     .newyear-photo,
     .wedding-photo{
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         grid-gap: 5px;
     }
     .image-container{
         width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
     .master-photo1{
         max-width: 600px;
@@ -585,8 +626,11 @@ justify-content: center;}
         padding: 0 5%;
     }
     .item-price{
-        grid-template-columns: auto;
-        justify-content: center;
+        -ms-grid-columns: auto;
+            grid-template-columns: auto;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         grid-gap: 30px;
 
     }
@@ -615,7 +659,9 @@ justify-content: center;}
     .master-photo,
     .newyear-photo,
     .wedding-photo{
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         grid-gap: 5px;
     }
 
