--- a/styles/service.css
+++ b/styles/service.css
@@ -1,20 +1,27 @@
 
 
 .visible-item{
+    display: -ms-grid;
     display: grid;
 }
 .container1{
     width: 100%;
     color:  black;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-bottom: 30px;
     padding-top: 50px;
 }
 .services{
     margin: 0 10%;
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: auto;   
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;   
     grid-gap: 40px;
 }
 /* ---service blocks---- */
@@ -22,8 +29,10 @@
     width: 1300px;
     height: 500px;
     background-color:  rgba(227, 227, 228, 0.721);
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     border-radius: 10px;
     box-shadow: 0 0 10px 7px gray;   
 }
@@ -36,17 +45,29 @@
 .service-infoBlock{
     width: 100%;
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .service-describe{
     width: 450px;
     height: 400px;
+    display: -ms-grid;
     display: grid;
-    grid-template-rows: 3fr 1fr 6fr 2fr;
-    justify-content: left;
-    align-items: center;
+    -ms-grid-rows: 3fr 1fr 6fr 2fr;
+        grid-template-rows: 3fr 1fr 6fr 2fr;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .service-header{
     font-size: 25px;
@@ -57,8 +78,12 @@
 .service-price{
     width: 140px;
     font-size: 16px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
     color:    rgb(25, 247, 224);
     font-weight: bold;
 }
@@ -67,11 +92,31 @@
     height: 20px;
 }
 .service-about{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 .service-button a{
-    display: grid;
+    position: relative;
+    display: inline-block;
+    width: 10em;
+    height: 2.5em;
+    line-height: 2.5em;
+    vertical-align: middle;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0 -1px 1px #777;
+    color: #fff;
+    outline: none;
+    border: 2px solid rgb(43, 161, 246);
+    border-radius: 5px;
+    box-shadow: 0 0 0 60px rgba(0,0,0,0) inset, .1em .1em .2em rgb(0, 57, 136);
+    background: -webkit-linear-gradient(#75cefb, rgb(56, 150, 244) 48%, rgb(2, 126, 234) 52%, rgb(23, 150, 240));
+    background: linear-gradient(#75cefb, rgb(56, 150, 244) 48%, rgb(2, 126, 234) 52%, rgb(23, 150, 240));
+    /* display: grid;
     justify-content: center;
     align-items:center;
     width: 170px;
@@ -82,13 +127,16 @@
     color: white;
     font-size: 20px;
     border-radius: 10px;
-    box-shadow: 1px 2px 2px 2px rgba(81, 138, 230, 0.748) ;
+    box-shadow: 1px 2px 2px 2px rgba(81, 138, 230, 0.748) ; */
 }
-.service-button a:hover{
-    cursor: pointer;
+.service-button a:focus{
+    top: .1em;
+    left: .1em;
+    box-shadow: 0 0 0 60px rgba(0,0,0,.05) inset;
+    /* cursor: pointer;
     background-color:black;
     transition: all linear .3s;
-    box-shadow: 1px 2px 2px 2px grey ;
+    box-shadow: 1px 2px 2px 2px grey ; */
 
 }
 .service-photo2{
